[gd_scene load_steps=4 format=3 uid="uid://btlc50u4bidcd"]

[ext_resource type="Script" uid="uid://c2utk4qnieq6c" path="res://menus/startup_menu.gd" id="1_1wl7q"]

[sub_resource type="LabelSettings" id="LabelSettings_fr6ne"]
font_size = 64
font_color = Color(0, 0, 0, 1)
outline_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_1wl7q"]
font_size = 21

[node name="startupMenu" type="Node2D"]
script = ExtResource("1_1wl7q")

[node name="structures" type="Node2D" parent="."]

[node name="back" type="ColorRect" parent="structures"]
offset_left = -699.0
offset_top = -378.0
offset_right = 733.0
offset_bottom = 402.0
color = Color(0.6748146, 0.67481464, 0.6748144, 1)

[node name="btn_start" type="Button" parent="structures/back"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 586.0
offset_top = 322.0
offset_right = 812.0
offset_bottom = 434.0
disabled = true
text = "START"

[node name="Label" type="Label" parent="structures"]
offset_left = -237.0
offset_top = -378.0
offset_right = 240.0
offset_bottom = -59.0
text = "ARGEBIE"
label_settings = SubResource("LabelSettings_fr6ne")
horizontal_alignment = 1
vertical_alignment = 1

[node name="doors" type="Node2D" parent="structures"]
visible = false
z_index = 5
z_as_relative = false

[node name="right" type="ColorRect" parent="structures/doors"]
offset_top = -335.0
offset_right = 581.0
offset_bottom = 355.0
color = Color(0, 0, 0, 1)

[node name="left" type="ColorRect" parent="structures/doors"]
offset_left = -595.0
offset_top = -338.0
offset_bottom = 353.0
color = Color(0, 0, 0, 1)

[node name="colors" type="Node2D" parent="structures"]
visible = false

[node name="cContainer" type="HBoxContainer" parent="structures/colors"]
offset_left = -113.0
offset_top = -53.0
offset_right = 114.0
offset_bottom = 54.0
alignment = 1

[node name="btn_R" type="Button" parent="structures/colors/cContainer"]
modulate = Color(1, 0, 0, 1)
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "R"

[node name="btn_G" type="Button" parent="structures/colors/cContainer"]
self_modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "G"

[node name="btn_B" type="Button" parent="structures/colors/cContainer"]
self_modulate = Color(0, 0, 1, 1)
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "B"

[node name="Label" type="Label" parent="structures/colors"]
offset_left = -179.0
offset_top = -92.0
offset_right = 180.0
offset_bottom = -62.0
text = "Choose your starter color"
label_settings = SubResource("LabelSettings_1wl7q")
horizontal_alignment = 1
vertical_alignment = 1

[node name="colortimer" type="Timer" parent="structures/colors"]
one_shot = true

[node name="fullwipeBtn" type="Button" parent="."]
offset_left = 424.0
offset_top = 298.0
offset_right = 573.0
offset_bottom = 321.0
text = "Reset Game Data"

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="pressed" from="structures/back/btn_start" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="structures/colors/cContainer/btn_R" to="." method="_on_btn_r_pressed"]
[connection signal="pressed" from="structures/colors/cContainer/btn_G" to="." method="_on_btn_g_pressed"]
[connection signal="pressed" from="structures/colors/cContainer/btn_B" to="." method="_on_btn_b_pressed"]
[connection signal="timeout" from="structures/colors/colortimer" to="." method="_on_colortimer_timeout"]
[connection signal="pressed" from="fullwipeBtn" to="." method="_on_fullwipe_btn_pressed"]
